syntax = "proto3";
package abi;

// import "error.proto";

option swift_prefix = "Abi";

message CheckTarRequest {
    string tarHash = 1;
    string file_path = 2;
}


message CheckTarResponse {
    // AppError error = 1;
}

message UploadTarRequest {
    string tarHash = 1;
    optional UnTarRequest unTar = 2;
} 

message UploadTarData {
    string uploadUrl = 1;
}

message UploadTarResponse {
    // AppError error = 1;
    UploadTarData data = 2;
}

message DownloadTarRequest {
    string tarHash = 1;
}

message DownloadTarData {
    string downloadUrl = 1;
}

message DownloadTarResponse {
    // AppError error = 1;
    DownloadTarData data = 2;
}

message UnTarRequest {
    string tarHash = 1;
    string targetDir = 2;
    optional bool overwrite = 3;
}



message UnTarResponse {
    // AppError error = 1;
}

message ReplaceTextRequest {
    string targetDir = 2;
    string oldText = 3;
    string newText = 4;
    repeated string suffix = 5;	

}

message ReplaceTextResponse {
    // AppError error = 1;
}

message ClearTarDirRequest {}

message ClearTarDirResponse {
    // AppError error = 1;
}

message ClearDirRequest {
    string dir = 1;
}

message ClearDirResponse {
    // AppError error = 1;
}

service PluginHub {
    rpc CheckTar(CheckTarRequest) returns (CheckTarResponse) {};
    rpc UploadTar(UploadTarRequest) returns (UploadTarResponse) {};
    rpc DownloadTar(DownloadTarRequest) returns (DownloadTarResponse) {};
    rpc UnTar(UnTarRequest) returns (UnTarResponse) {};
    rpc ReplaceText(ReplaceTextRequest) returns (ReplaceTextResponse) {};
    rpc ClearTarDir(ClearTarDirRequest) returns (ClearTarDirResponse) {};
    rpc ClearDir(ClearDirRequest) returns (ClearDirResponse) {};
}