syntax = "proto3";
package abi;

option swift_prefix = "Abi";


message AppError {
  // Error code, shall be 1:1 mapping with `error` crate
  AppErrorCode code = 1;
  // Error message
  optional string message = 2;
}

// error code
enum AppErrorCode {
  Ok = 0;
  UnsupportedApi = 1;
  MalformedApiResponse = 2;

  // converted errors
  ProstDecodeError = 200;
  ProstEncodeError = 201;

  TarNotExist = 1000;
  FileNotExist = 1001;
  DirNotExist = 1002;
  ConfigNotExist = 1003;
  ConfigureError = 1004;
  IOError = 1005;

  Other = 9999;
}
